discussion/kv_engine/176424/176424_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Move Backfill Task to its own source files

Change-Id: I74fa054f38cd327221bbb106bb059ed827a51003

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-27 13:12:19.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-27 13:12:33.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304230/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-27 13:47:43.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/296/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/296/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/290/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/290/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/409/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/409/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/437/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only
[2022-06-27T13:21:35.316Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1180: Failure
[2022-06-27T13:21:35.316Z] Expected equality of these values:
[2022-06-27T13:21:35.316Z]   100
[2022-06-27T13:21:35.316Z]   getRRPercent(*store->getVBucket(vbid))
[2022-06-27T13:21:35.316Z]     Which is: 94
[2022-06-27T13:21:35.316Z] vb:0 not fully resident after eviction
[2022-06-27T13:21:35.316Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1180: Failure
[2022-06-27T13:21:35.316Z] Expected equality of these values:
[2022-06-27T13:21:35.316Z]   100
[2022-06-27T13:21:35.316Z]   getRRPercent(*store->getVBucket(vbid))
[2022-06-27T13:21:35.316Z]     Which is: 98
[2022-06-27T13:21:35.316Z] vb:1 not fully resident after eviction
[2022-06-27T13:21:35.316Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (298 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/306/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/307/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/307/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/309/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/309/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/296/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/317/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/317/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/299/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
